<?xml version="1.0"?>
<package>
  <name>fastfusion_node</name>
  <version>0.0.0</version>
  <description>Main node containing fastfustion from TUM</description>
  <maintainer email="karrerm@student.ethz.ch">Marco Karrer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>
  <build_depend>auxiliary</build_depend>
  <run_depend>auxiliary</run_depend>
  <build_depend>camerautils</build_depend>
  <run_depend>camerautils</run_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>
  <build_depend>fusion</build_depend>
  <run_depend>fusion</run_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  
  <build_depend>tclap</build_depend>
  <run_depend>tclap</run_depend>
</package>
