<?xml version="1.0"?>
<package>
  <name>fusion</name>
  <version>0.0.0</version>
  <description>Sub-Package containing fastfustion from TUM</description>
  <maintainer email="karrerm@student.ethz.ch">Marco Karrer</maintainer>
  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend>
  <build_depend>auxiliary</build_depend>
  <run_depend>auxiliary</run_depend>
  <build_depend>camerautils</build_depend>
  <run_depend>camerautils</run_depend>
</package>
