<?xml version="1.0"?>
<package>
  <name>tclap</name>
  <version>0.0.0</version>
  <description>Sub-Package containing fastfustion from TUM</description>
  <maintainer email="karrerm@student.ethz.ch">Marco Karrer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
   <run_depend>cmake_modules</run_depend>
</package>
